--- a/src/pages/cart/index.astro
+++ b/src/pages/cart/index.astro
@@ -1,6 +1,6 @@
 ---
 import Breadcrumb from "@components/Breadcrumb/Breadcrumb.astro";
-import InputQuantity from "@components/InputQuantity.astro";
+import CartItem from "@components/Products/CartItem.astro";
 import { isActionError, actions } from "astro:actions";
 import Layout from "@layouts/Layout.astro";
 import Icon from "@icons";
@@ -59,64 +59,11 @@ export const prerender = false;
           <ul aria-label="product items" class="space-y-6">
             {joinItems.map((item, index) => (
               <li aria-label="item">
-                <article
-                  aria-label="Product"
-                  class="inline-flex gap-x-4 w-full"
-                >
-                  <figure aria-label="Product Thumbnail">
-                    <img
-                      class="aspect-square max-w-28 max-nav:max-w-24 h-fit"
-                      onerror={`this.src='/imgs/not-found.webp'`}
-                      src={item.product.thumbnailUrl}
-                      alt={item.product.title}
-                      decoding="async"
-                    />
-                  </figure>
-                  <div class="inline-flex gap-x-2 justify-between w-full">
-                    <div
-                      aria-label="Product details"
-                      class="flex flex-col justify-between"
-                    >
-                      <span>
-                        <a
-                          href={`shop/product/${item.product.id}`}
-                          class="hover:underline"
-                        >
-                          <h4 class="font-bold text-lg max-nav:text-base max-nav:w-48 max-sm:w-24 truncate cursor-pointer">
-                            {item.product.title}
-                          </h4>
-                        </a>
-                        <p class="font-light text-sm">
-                          <strong>Size:</strong> {item.product_details.size}
-                        </p>
-                        <p class="font-light text-sm">
-                          <strong>Color:</strong> {item.product_details.color}
-                        </p>
-                      </span>
-                      <data
-                        aria-label="current price"
-                        class="font-bold text-xl max-nav:text-lg"
-                        value="120"
-                      >
-                        ${item.product.price ?? "$"}
-                      </data>
-                    </div>
-                    <div class="flex flex-col justify-between">
-                      <button
-                        aria-label="Delete cart product"
-                        class="w-fit self-end"
-                        type="button"
-                      >
-                        <Icon.Trash class="w-6 max-nav:w-5" />
-                      </button>
-                      <InputQuantity
-                        defaultValue={item.cart.quantity}
-                        class="!h-fit max-nav:text-base"
-                        itemClass="max-nav:text-sm"
-                      />
-                    </div>
-                  </div>
-                </article>
+                <CartItem
+                  product_details={item.product_details}
+                  product={item.product}
+                  cart={item.cart}
+                />
                 {joinItems.length === index && (
                   <hr class="mt-6 border-primary" />
                 )}
