--- a/src/pages/cart/index.astro
+++ b/src/pages/cart/index.astro
@@ -25,6 +25,7 @@ export const prerender = false;
 
 <Layout
   className="max-w-screen-8xl mx-auto w-full px-4 py-6 border-primary border-t"
+  id="cart-page"
 >
   <Breadcrumb />
   <h1
