--- a/src/pages/cart/index.astro
+++ b/src/pages/cart/index.astro
@@ -1,9 +1,9 @@
 ---
+import OrderSummary from "@components/react-components/OrderSummary";
 import Breadcrumb from "@components/Breadcrumb/Breadcrumb.astro";
 import CartItem from "@components/Products/CartItem.astro";
 import { isActionError, actions } from "astro:actions";
 import Layout from "@layouts/Layout.astro";
-import Icon from "@icons";
 
 type CartResult = Awaited<ReturnType<typeof actions.getCart>>;
 type CartItem = NonNullable<Extract<CartResult, { data: any }>["data"]>[number];
@@ -79,65 +79,6 @@ export const prerender = false;
     </section>
 
     <!-- RESUMEN DE LA ORDEN -->
-    <section
-      aria-labelledby="order_summary_heading"
-      class="border border-primary rounded-3xl p-5 nav:px-6 nav:py-5 flex flex-col gap-y-6 max-nav:gap-y-4 h-fit"
-    >
-      <!-- CABECERA DEL RESUMEN -->
-      <h2 id="order_summary_heading" class="font-bold text-2xl/6 text-black">
-        Order Summary
-      </h2>
-      <div
-        aria-label="Order summary details"
-        class="flex flex-col gap-y-5 max-nav:gap-y-3.5 text-lg max-nav:text-base font-light"
-      >
-        <div aria-label="Subtotal" class="flex justify-between">
-          <p>Subtotal</p>
-          <p class="font-bold">$565</p>
-        </div>
-        <div aria-label="Discount" class="flex justify-between">
-          <p>Discount (-20%)</p>
-          <p class:list={["text-red-600", "font-bold"]}>-$113</p>
-        </div>
-        <div aria-label="Delivery fee" class="flex justify-between">
-          <p>Delivery Fee</p>
-          <p class="font-bold">$15</p>
-        </div>
-        <hr class="border-primary" />
-        <div aria-label="Total" class="flex justify-between">
-          <p class="font-medium">Total</p>
-          <p class="font-bold text-2xl max-nav:text-xl">$467</p>
-        </div>
-      </div>
-      <!-- CAMPO CODIGO DESCUENTO -->
-      <div class="inline-flex gap-x-3">
-        <label class="relative grow" for="promo_code">
-          <span class="sr-only">Add promo code</span>
-          <input
-            type="text"
-            id="promo_code"
-            autocomplete="off"
-            placeholder="Add promo code"
-            class="bg-primary rounded-3xl pl-12 px-4 py-3 w-full max-nav:text-sm"
-          />
-          <Icon.Tag class="absolute top-3 left-4 w-5" />
-        </label>
-        <button
-          class="bg-black text-white max-nav:text-sm rounded-3xl px-8 py-3"
-          aria-label="Apply discount code"
-        >
-          Apply
-        </button>
-      </div>
-      <!-- BOTÓN CHECKOUT -->
-      <button
-        class="bg-black rounded-full text-white max-nav:text-sm p-4 inline-flex gap-x-3 items-center justify-center"
-        aria-label="Go to Checkout"
-        type="button"
-      >
-        <span class="leading-3">Go to Checkout</span>
-        <Icon.Arrow class="w-6 max-nav:w-5" />
-      </button>
-    </section>
+    <OrderSummary client:load />
   </div>
 </Layout>
