--- a/src/components/Shop.astro
+++ b/src/components/Shop.astro
@@ -25,6 +25,7 @@ export const prerender = false;
 <Layout
   id="shop"
   title="Shop"
+  clientRouter={true}
   className="max-w-screen-8xl mx-auto w-full nav:grid nav:grid-cols-[0.5fr_1fr_1fr] nav:grid-rows-[auto_1fr_1fr_1fr_auto] gap-x-5 gap-y-6 px-4 pb-20 pt-6 border-primary border-t"
 >
   <!-- BREADCRUMB -->
