--- a/src/pages/shop/[category]/[productId].astro
+++ b/src/pages/shop/[category]/[productId].astro
@@ -40,8 +40,9 @@ const previousPrice = product.discount
 ---
 
 <Layout
-  id="product-page"
   title="Product"
+  id="product-page"
+  clientRouter={true}
   className="w-full max-w-screen-8xl px-4 pt-6 mx-auto border-t border-primary"
 >
   <!-- BREADCRUMB -->
@@ -303,5 +304,5 @@ const previousPrice = product.discount
   </Tab>
 </Layout>
 
-<script set:html={`window.user = ${JSON.stringify(user)}`}></script>
+<script set:html={`window.user = ${JSON.stringify(user)}`} />
 <script src="@scripts/productId.ts"></script>
