--- a/src/components/ColorSelector.astro
+++ b/src/components/ColorSelector.astro
@@ -3,9 +3,6 @@ import Color from "color";
 
 interface ColorSelectorProps {
   type?: 'checkbox' | 'radio';
-  /**
-   * @deprecated Use `color` instead
-   */
   className: string;
   checked?: boolean;
   color?: string;
@@ -18,7 +15,7 @@ const {
   id,
   name,
   type = 'checkbox',
-  className = "bg-black",
+  className = "",
   color = "black",
   checked = false,
   size = "38px",
